fjord-compiler/test/errors/TooManyParameters1.fj
module test.errors.TooManyParameters1

myFun : Int -> Int
myFun x y = 
  x
